[gd_scene load_steps=6 format=3 uid="uid://bfsjym2svavnd"]

[ext_resource type="Script" path="res://scripts/PauseMenu.gd" id="1_wgsca"]
[ext_resource type="Shader" path="res://shaders/pause_blur_shader.gdshader" id="2_cu04x"]
[ext_resource type="PackedScene" uid="uid://can6od2otra6s" path="res://scenes/canvas_ui/button.tscn" id="2_mtwkg"]
[ext_resource type="PackedScene" uid="uid://b8tsw525wce4u" path="res://scenes/canvas_ui/btn_click.tscn" id="3_2ebv3"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xppwf"]
shader = ExtResource("2_cu04x")
shader_parameter/amount = 3.0

[node name="Pause" type="Node2D"]
script = ExtResource("1_wgsca")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
material = SubResource("ShaderMaterial_xppwf")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PauseMenu" type="Control" parent="CanvasLayer"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/PauseMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PauseMenu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/PauseMenu/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PauseMenu/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12
alignment = 1

[node name="Separator" type="Control" parent="CanvasLayer/PauseMenu/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Resume" parent="CanvasLayer/PauseMenu/MarginContainer/HBoxContainer/VBoxContainer" instance=ExtResource("2_mtwkg")]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Resume"

[node name="Restart" parent="CanvasLayer/PauseMenu/MarginContainer/HBoxContainer/VBoxContainer" instance=ExtResource("2_mtwkg")]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Retry"

[node name="MainMenu" parent="CanvasLayer/PauseMenu/MarginContainer/HBoxContainer/VBoxContainer" instance=ExtResource("2_mtwkg")]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Main Menu"

[node name="Timer" type="Timer" parent="CanvasLayer/PauseMenu"]
wait_time = 0.1
one_shot = true

[node name="btn_click" parent="CanvasLayer/PauseMenu" instance=ExtResource("3_2ebv3")]

[connection signal="pressed" from="CanvasLayer/PauseMenu/MarginContainer/HBoxContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="CanvasLayer/PauseMenu/MarginContainer/HBoxContainer/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="CanvasLayer/PauseMenu/MarginContainer/HBoxContainer/VBoxContainer/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="timeout" from="CanvasLayer/PauseMenu/Timer" to="." method="_on_timer_timeout"]
